@@ -1,1 +1,0 @@
-standard Distribution Utilities for Python
